# frostwall

./: CHANGELOG.md  Cargo.toml  README.md
config/: default.toml
scripts/: gen_embeddings.py
src/: app.rs  clip.rs  clip_embeddings.rs  clip_embeddings_bin.rs  main.rs  pairing.rs  swww.rs  utils.rs  wallpaper.rs
src/ui/: layout.rs
